apps/immich/immich-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.2.4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 2283
              name: http
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
          startupProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 3Gi

      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: increase-buffer
  namespace: immich
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
    memRequestBodyBytes: 0
    memResponseBodyBytes: 0
