apps/immich/immich-db-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  serviceName: immich-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgresql
  template:
    metadata:
      labels:
        app: immich-postgresql
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgresql
          image: tensorchord/cloudnative-pgvecto-rs:16.3-v0.2.1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          command:
            - "bash"
            - "-c"
            - |
              echo "shared_preload_libraries = 'vectors.so'" >> /var/lib/postgresql/data/postgresql.conf || true
              docker-entrypoint.sh postgres -c shared_preload_libraries=vectors.so
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 2
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  selector:
    app: immich-postgresql
  ports:
    - port: 5432
      targetPort: 5432
